# datam8-cli

./: .editorconfig  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  hatch_build_datamodel.py  license_file_header.txt  pyproject.toml  test-class.py  test.csv  test.json
.github/workflows/: ci-pull-request-merged-into-main.yml  ci-pull-request.yml  ci-push.yml  reusable-lint-build-test.yml
docs/: backend-contract.md  connectors.md  frontend-cli-mapping.md  jobs.md  migration-neon-to-generator.md  neon-cli-mapping.md  server.md  v2-beta-port-handover.md  v2-beta-port-pr-descriptions.md
docs/plans/: v2-cutover-plan.md
pyinstaller/: datam8.py  datam8_entrypoint.py
scripts/: add_license_headers.py  build_binaries.py
skills/datam8-cli-agent/: SKILL.md
skills/datam8-cli-agent/agents/: openai.yaml
skills/datam8-cli-agent/references/: agent-command-selection.md  cli-contract.md  metadata-model-coverage.md  natural-language-examples.md  safety-rules.md  workflows.md  zone-locator-resolution.md
src/datam8/: __main__.py  app.py  config.py  errors.py  exceptions.py  factory.py  function_sources.py  generate.py  logging.py  migration_v1.py  model.py  model_exceptions.py  opts.py  parser.py  parser_exceptions.py  parser_v1.py  secrets.py  solution.py  source.py
src/datam8/api/: app.py  sample.py
src/datam8/api/routes/: __init__.py  api.py  api_connectors.py  api_solution.py  api_workspace.py  common.py  connectors.py  entities.py  jobs.py  legacy_api.py  model.py  plugins.py  refactor.py  response_models.py  responses.py  secrets.py  solution.py  sources.py  system.py
src/datam8/cli/: main.py  output.py
src/datam8/cmd/: base.py  common.py  config_cmd.py  connector.py  datasource.py  entities.py  fs.py  generate.py  index.py  init.py  migrate.py  migration.py  model.py  plugin.py  refactor.py  root.py  script.py  search.py  secret.py  serve.py  solution.py  sources.py  validate.py
src/datam8/core/: atomic.py  duration.py  entity_resolution.py  errors.py  indexing.py  jsonops.py  jsonutil.py  legacy_function_sources.py  locator_codec.py  lock.py  migration_v1_to_v2.py  migration_v1_to_v2_config.py  migration_v1_to_v2_transform.py  parse_utils.py  parser_v1.py  paths.py  refactor.py  runtime_meta.py  schema_refresh.py  search.py  secrets.py  solution_files.py  solution_index.py  trace.py  version.py  workspace_io.py  workspace_service.py
src/datam8/core/connectors/: binding.py  builtins.py  http_api.py  oracle.py  plugin_host.py  plugin_manager.py  registry.py  resolve.py  semver.py  sqlserver.py  types.py  validation.py
src/datam8/core/jobs/: manager.py  models.py
src/datam8/core/plugins/: manager.py
src/datam8/core/validation/: __init__.py  (+1 more)
src/datam8/model/: __init__.py  entity_wrapper.py  locator.py  model.py
src/datam8/plugins/: __init__.py  base.py  manager.py
src/datam8/utils/: __init__.py  cache.py  hasher.py  importer.py
src/datam8_model/: attribute.py  base.py  common.py  data_product.py  data_source.py  data_type.py  diagram.py  folder.py  model.py  plugin.py  property.py  solution.py  zone.py
src/datam8_model/v1/: AttributeTypes.py  CoreModelEntry.py  CuratedModelEntry.py  DataModules.py  DataProducts.py  DataSources.py  DataTypes.py  DiagramDiagram.py  Index.py  RawModelEntry.py  Solution.py  StageModelEntry.py  __init__.py
src/datam8_model_v1/: __init__.py  models.py
src/dm8gen/: app.py  config.py  factory.py  generate.py  model.py  model_exceptions.py  opts.py  parser.py  parser_exceptions.py
src/dm8gen/cmd/: generate.py  reverse.py  validate.py
src/dm8gen/utils/: __init__.py  cache.py  hasher.py  importer.py
src/dm8model/: attribute.py  base.py  common.py  data_product.py  data_source.py  data_type.py  diagram.py  folder.py  model.py  property.py  solution.py  zone.py
template/pydantic_v2/: BaseModel.jinja2  ConfigDict.jinja2  RootModel.jinja2
tests/: README.md  config.py  conftest.py  test_010_model.py  test_010_model_cases.py  test_011_model_relationships.py  test_012_v2_beta_model_contracts.py  test_013_function_sources.py  test_014_source_metadata_port.py  test_015_source_compatibility_routes.py  test_016_entity_tree_operations.py  test_017_plugin_secret_sql_regressions.py  test_018_solution_init.py  test_019_sample_solution_api_e2e.py  test_020_helper.py  test_020_helper_cases.py  test_030_factory.py  test_030_factory_cases.py  test_032_plugin_id_contract.py  test_035_secrets.py  test_040_connector_binding.py  test_040_connector_binding_cases.py  test_040_migration.py  test_040_migration_cases.py  test_040_solution_validate.py  test_041_validation_unicode.py  test_045_sql_server_metadata.py  test_050_api_connectors.py  test_050_api_connectors_cases.py  test_055_api_solution.py  test_056_api_parity_aliases.py  test_057_api_locator_endpoints.py  test_057_api_migration.py  test_058_parser_v1.py  test_059_migration_v1_to_v2_transform.py  test_060_api_plugins.py  test_060_api_plugins_cases.py  test_065_schema_refresh.py  test_070_plugin_loader.py  test_070_plugin_loader_cases.py  (+21 more)
tests/db/: README.md  docker-compose.yml  restore-db.sh
tests/fixtures/job_solution/: TestSolution.dm8s
tests/fixtures/plugin_vendored_deps/: lazydep_connector.py  testdep_connector.py
tests/test_040_migration/: core_entity_after.json  core_entity_before.json
(+20 files in other folders)
