[project]
name = "datam8"
version = "2.0.0"
description = "ORAYLIS DataM8 CLI"
license = "GPL-3.0"
requires-python = ">=3.12"
readme = "README.md"
authors = [{ name = "ORAYLIS Gmbh", email = "DataM8@Oraylis.de" }]
dependencies = [
  "autopep8==2.3.1",
  "Jinja2==3.1.6",
  "jsonschema==4.23.0",
  "pydantic==2.8.2",
  "rich==13.9.4",
  "sqlparse==0.5.1",
  "typer==0.19.1",
  "fastapi==0.128.0",
  "uvicorn==0.40.0",
  "httpx==0.28.1",
  "platformdirs==4.3.6",
  "certifi==2025.1.31",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.scripts]
datam8 = "datam8.app:app"

[project.urls]
Homepage = "https://github.com/oraylis/datam8-generator"
Issues = "https://github.com/oraylis/datam8/issues"

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "pytest-cases>=3.8.6",
  "datamodel-code-generator>=0.33.0",
  "hatchling == 1.27.0",
  "deepdiff ~=8.6",
]

[project.optional-dependencies]
build = [
  "pyinstaller==6.11.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

#############
# tool.ruff #
#############

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = ["I", "E4", "E7", "E9", "W", "F", "Q", "UP"]

[tool.ruff.format]
quote-style = "double"

##############
# tool.hatch #
##############

[tool.hatch.build.targets.wheel]
packages = ["src/datam8", "src/datam8_model"]

[tool.hatch.build.hooks.custom]
path = "hatch_build_datamodel.py"
dependencies = ["datamodel-code-generator>=0.33.0", "ruff"]

###############
# tool.pytest #
###############

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--capture=sys"

[tool.pyright]
venvPath = ".venv"
venv = "."
