[project]
name = "datam8"
version = "2.0.0"
description = "ORAYLIS DataM8 CLI"
license = "GPL-3.0"
requires-python = ">=3.12"
readme = "README.md"
authors = [{ name = "ORAYLIS Gmbh", email = "DataM8@Oraylis.de" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "Jinja2~=3.1.0",
  "pydantic~=2.12.0",
  "typer~=0.19.0",
  "keyring~=25.6.0",
  "keyrings-cryptfile~=1.3.9",
  # connecting stuff
  "polars~=1.39.0",
  "pyarrow~=23.0.0",
  "requests~=2.33",
]

[project.optional-dependencies]
azure = [
  "azure-identity~=1.25.3",
  "azure-storage-file-datalake~=12.23.0",
  "deltalake~=1.5.1",
]
api = [
  "uvicorn~=0.40.0",
  "fastapi~=0.128.0",
]
sql = [
  "connectorx~=0.4.0",
]

[project.scripts]
datam8 = "datam8.app:app"

[project.urls]
Homepage = "https://github.com/oraylis/datam8-generator"
Issues = "https://github.com/oraylis/datam8/issues"

[dependency-groups]
dev = [
  "pytest~=8.3.0",
  "pytest-cases~=3.8.0",
  "coverage~=7.13.5",
  "hatchling~=1.27.0",
  "httpx~=0.25.0",
  "bandit~=1.9.0",
  "deepdiff==8.6.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
exclude-newer = "1 weeks"

#############
# tool.ruff #
#############

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["I", "E4", "E7", "E9", "W", "F", "Q", "UP"]

[tool.ruff.format]
quote-style = "double"

##############
# tool.hatch #
##############

[tool.hatch.build.targets.wheel]
packages = ["src/datam8", "src/datam8_model"]

[tool.hatch.build.hooks.custom]
path = "hatch_build_datamodel.py"
dependencies = [
  "datamodel-code-generator~=0.33.0",
  "ruff~=0.15.0",
]

###############
# tool.pytest #
###############

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--capture=sys"

[tool.pyright]
venvPath = ".venv"
venv = "."
